--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ script/Rmd/instruction.html
 # Max
 script/Max/data/
 script/Max/midi/
+script/Max/cond/cb_before22.xlsx
 
 # python Jupyter notebook
 script/jupyter/.ipynb_checkpoints/image_generator-checkpoint.ipynb
