--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@ script/Max/data
 script/Max/midi
 
 # R
-script/R/.Rhistory
-data/
-filtered/
+*.Rhistory
+script/R/data/
+script/R/filtered/
 
 # local folders
 script/lilypond/old
