--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ script/R/data/
 script/R/filtered/
 
 # my local folders
-script/lilypond/old
+material/lilypond/david
 script/Max/docs
 script/Max/backup
