--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,11 @@ others/
 script/R/raw_data/
 script/R/filtered/
 script/R/trimmed/
-script/R/old_analysis
 
 # RNotebook
 script/RNotebook/filtered
 script/RNotebook/trimmed
-script/RNotebook/*csv
+script/RNotebook/questionnaire.csv
 
 # Max
 script/Max/data/
@@ -23,6 +22,7 @@ script/Max/cond/cb_checking.xlsx
 # Jupyter notebook
 script/jupyter/.ipynb_checkpoints/image_generator-checkpoint.ipynb
 
-# Removed stimuli (tempo change)
+# personal stuff
+script/R/old_analysis
 script/jupyter/stimuli/removed/
 script/lilypond/removed/
