--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ experiment/midi/
 paper/coverletter
 paper/feedback
 paper/manuscript_files
-paper/submission_info*
+paper/submission_info
 
 # personal stuff
 merged
