--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ experiment/midi/
 paper/coverletter
 paper/feedback
 paper/manuscript_files
-paper/submitted
+paper/plos
 
 # personal stuff
 merged
