--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ experiment/midi/
 paper/coverletter
 paper/feedback
 paper/manuscript_files
-paper/plos
+paper/others
 paper/srep-checklist-for-initial-submissions.pdf
 
 # personal stuff
