--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ paper/coverletter
 paper/feedback
 paper/manuscript_files
 paper/others
+paper/review
 paper/srep-checklist-for-initial-submissions.pdf
 
 # personal stuff
